Limit table width

--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -3,7 +3,7 @@
   <div class="p-3">
     <h1>Products</h1>
     <% if (productList.length > 0) { %>
-      <table class="table">
+      <table class="table" style="max-width: 500px;">
         <thead>
           <tr>
             <th scope="col">ID</th>
