--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,17 +9,17 @@
     >
       <div>
         <label class="form-label" for="name" >Product name:</label>
-        <input class="form-control mb-3" type="text" name="name" required>
+        <input class="form-control mb-3" type="text" name="name" placeholder="Name" required>
       </div>
 
       <div>
         <label class="form-label" for="price">Price:</label>
-        <input class="form-control mb-3" type="number" name="price" required>
+        <input class="form-control mb-3" type="number" name="price" placeholder="Price" min="1" value="1" required>
       </div>
 
       <div>
         <label class="form-label" for="thumbnail">Thumbnail URL:</label>
-        <input class="form-control mb-3" type="url" name="thumbnail">
+        <input class="form-control mb-3" type="url" name="thumbnail" placeholder="Thumbnail">
       </div>
 
       <input class="btn btn-success d-inline-block" type="submit" value="Add product">
