--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,32 +1,8 @@
 <%- include('../partials/head', { pageTitle: 'Load product' }) %>
 <body>
+  <!-- PRODUCT FORM -->
   <div class="w-100 vh-100 d-flex align-items-center">
-    <form
-      class="product-form mx-auto p-3 rounded shadow-md border"
-      method="post"
-      action="/productos"
-      enctype="multipart/form-data"
-    >
-      <div>
-        <label class="form-label" for="name" >Product name:</label>
-        <input class="form-control mb-3" type="text" name="name" placeholder="Name" required>
-      </div>
-
-      <div>
-        <label class="form-label" for="price">Price:</label>
-        <input class="form-control mb-3" type="number" name="price" placeholder="Price" min="1" value="1" required>
-      </div>
-
-      <div>
-        <label class="form-label" for="thumbnail">Thumbnail URL:</label>
-        <input class="form-control mb-3" type="url" name="thumbnail" placeholder="Thumbnail">
-      </div>
-
-      <input class="btn btn-success d-inline-block" type="submit" value="Add product">
-      <a href="/productos" onclick="window.location.href = '/productos'">
-        <button class="btn btn-outline-secondary d-inline-block">View products</button>
-      </a>
-    </form>
+    <%- include('../partials/product-form', { pageTitle: 'Load product' }) %>
   </div>
 </body>
 </html>
