--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle %> </title>
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/index.css">
+  <script defer src="/socket.io/socket.io.js"></script>
+  <script defer src="/js/index.js"></script>
 </head>
