Add stackblitz start command

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,8 +1,7 @@
 <%- include('../partials/head', { pageTitle: 'Load product' }) %>
 <body>
   <!-- PRODUCT FORM -->
-  <div class="w-100 vh-100 d-flex align-items-center">
-    <%- include('../partials/product-form', { pageTitle: 'Load product' }) %>
-  </div>
+  <h2><a href="/chat">Chat</a></h2>
+  <h2><a href="/productos">Products</a></h2>
 </body>
 </html>
