--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/head', { pageTitle: 'Load product' }) %>
+<%- include('../partials/head', { pageTitle: 'Chat' }) %>
 <div class="p-2">
   <ul id="messagesWindow">
     <%- messageListHTML %>
