--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -11,6 +11,6 @@
   >
     <input id="messageEmail" class="form-control" type="email" placeholder="email" size="18" style="width: auto;" required>
     <input id="messageContent" class="form-control" type="text" placeholder="message" size="32" style="width: auto;" required autocomplete="off">
-    <input class="btn btn-primary d-inline-block" type="submit" value="Send">
+    <input class="btn btn-primary d-inline-block" type="submit" value="Send >">
   </form>
 </div>
