--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/head', { pageTitle: 'Load product' }) %>
+<%- include('../partials/head', { pageTitle: 'Home' }) %>
 <body>
   <!-- PRODUCT FORM -->
   <h2><a href="/chat">Chat</a></h2>
