--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,13 @@
 <%- include('../partials/head', { pageTitle: 'Home' }) %>
 <body>
   <!-- PRODUCT FORM -->
-  <h2><a href="/chat">Chat</a></h2>
-  <h2><a href="/productos">Products</a></h2>
+  <ul>
+    <li>
+      <a href="/chat"><h2>Chat</h2></a>
+    </li>
+    <li>
+      <a href="/productos"><h2>Products</h2></a>
+    </li>
+  </ul>
 </body>
 </html>
