--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,9 @@
     <li>
       <a href="/productos"><h2>Products</h2></a>
     </li>
+    <li>
+      <a href="/carrito"><h2>Cart</h2></a>
+    </li>
   </ul>
 </body>
 </html>
