Add logging to container-mongo

--- a/views/partials/product-form.ejs
+++ b/views/partials/product-form.ejs
@@ -7,7 +7,7 @@
 >
   <div>
     <label class="form-label" for="productNameInput" >Product name:</label>
-    <input id="productNameInput" class="form-control mb-3" type="text" name="productNameInput" placeholder="Name" required>
+    <input id="productNameInput" class="form-control mb-3" type="text" name="productNameInput" placeholder="Name" required autocomplete="off">
   </div>
 
   <div>
