--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,7 +7,7 @@
   <title><%= pageTitle %> </title>
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/index.css">
-  <script defer src="https://cdn.jsdelivr.net/npm/normalizr@3.6.2/dist/normalizr.min.js"></script>
+  <!-- <script defer src="https://cdn.jsdelivr.net/npm/normalizr@3.6.2/dist/normalizr.min.js"></script> -->
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/js/index.js"></script>
 </head>
