Move chat and produts js to different files

--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/head', { pageTitle: 'Chat' }) %>
+<%- include('../partials/head', { pageTitle: 'Chat', content: '<script defer src="/js/chat.js"></script>' }) %>
 <div class="p-2">
   <!-- Filled with JS -->
   <ul id="messagesWindow" class="mb-0"></ul>
