--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/head', { pageTitle: 'Home' }) %>
+<%- include('../partials/head', { pageTitle: 'Home', content: '' }) %>
 <body>
   <!-- PRODUCT FORM -->
   <ul>
