--- a/views/partials/product-form.ejs
+++ b/views/partials/product-form.ejs
@@ -20,8 +20,9 @@
     <input id="productThumbnailInput" class="form-control mb-3" type="url" name="productThumbnailInput" placeholder="Thumbnail">
   </div>
 
-  <input class="btn btn-success d-inline-block" type="submit" value="Add product"">
-  <a href="/productos" onclick="window.location.href = '/productos'">
+  <input class="btn btn-success d-inline-block ms-auto" type="submit" value="Add product"">
+  <!-- ?XXX: remove -->
+  <!-- <a href="/productos" onclick="window.location.href = '/productos'">
     <button class="btn btn-outline-secondary d-inline-block">View products</button>
-  </a>
+  </a> -->
 </form>
