--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,4 +10,5 @@
   <script defer src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer type="module" src="/js/index.js"></script>
+  <%- content %>
 </head>
