--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -1,1 +1,5 @@
-<%- include('../partials/head', { pageTitle: 'Cart', content: '' }) %>
+<%- include('../partials/head', { pageTitle: 'Cart' }) %>
+<body>
+  <%- include('../partials/header', locals.user ? user : { }) %>
+</body>
+</html>
