--- a/views/pages/logout.ejs
+++ b/views/pages/logout.ejs
@@ -1,11 +1,22 @@
-<%- include('../partials/head.ejs', { pageTitle: 'User logout', content: ''}) %>
+<%- include('../partials/head.ejs', { pageTitle: 'User logout' }) %>
 <body>
+  <%- include('../partials/header', { user: null }) %>
+
   <div class="container">
-    <div class="col-md-4 offset-md-4 p-3 my-3">
+    <div class="col-md-6 offset-md-3 p-3 my-3">
       <div class="alert alert-primary" role="alert">
-        <h1 class="text-center">Logged out</h1>
-        <span class="text-center d-block">Hope to see you soon!</span>
+        <% if (locals?.user == null) { %>
+          <h1 class="text-center">You're not logged in!</h1>
+          <div class="mt-3 d-flex justify-content-center">
+            <a href="/login"><button class="btn btn-success btn-block">Log in</button></a>
+          </div>
+        <% } else { %>
+          <h1 class="text-center">Logged out</h1>
+          <span class="text-center d-block">Hope to see you soon <%= user.username %>!</span>
+          <script> setTimeout(() => window.location.href = '/login', 2000); </script>
+        <% } %>
       </div>
     </div>
   </div>
 </body>
+</html>
