Default data passed to every EJS contains user

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/head', { pageTitle: 'Cart' }) %>
 <body>
-  <%- include('../partials/header', locals.user ? user : { }) %>
+  <%- include('../partials/header') %>
 </body>
 </html>
