--- a/views/pages/products.ejs
+++ b/views/pages/products.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/head', { pageTitle: 'Products', content: '<script defer src="/js/products.js"></script>' }) %>
 <body>
-  <%- include('../partials/header', locals.user ? user : { }) %>
+  <%- include('../partials/header') %>
 
   <div class="d-flex align-items-start">
     <!-- PRODUCT FORM -->
