--- a/views/pages/chat.ejs
+++ b/views/pages/chat.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/head', { pageTitle: 'Chat', content: '<script defer src="/js/chat.js"></script>' }) %>
 <body>
-  <%- include('../partials/header', locals.user ? user : { }) %>
+  <%- include('../partials/header') %>
 
   <div class="p-2">
     <!-- Filled with JS -->
