--- a/views/pages/logout.ejs
+++ b/views/pages/logout.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/head.ejs', { pageTitle: 'User logout' }) %>
 <body>
-  <%- include('../partials/header') %>
+  <%- include('../partials/header', { user: {  } }) %>
 
   <div class="container">
     <div class="col-md-6 offset-md-3 p-3 my-3">
