--- a/views/partials/login-form.ejs
+++ b/views/partials/login-form.ejs
@@ -5,9 +5,11 @@
   enctype="multipart/form-data"
 >
   <div class="mb-3">
-    <label for="loginUsername">Username</label>
-    <input type="text" class="form-control" id="loginUsername" name="username" placeholder="Username" required
-      autofocus>
+    <label for="loginEmail">Email</label>
+    <input type="email" class="form-control" id="loginEmail" name="email" placeholder="email@example.com" required autofocus>
+    <label for="loginEmail" class="mt-3">Password</label>
+    <input type="password" class="form-control" id="loginPassword" name="password" placeholder="Password" required>
   </div>
   <button class="btn btn-success btn-block" type="submit">Log in</button>
+  <span class="form-suggestion mt-3">Don't have an account? <a href="/signup">Sign up</a></span>
 </form>
