--- a/views/partials/signup-form.ejs
+++ b/views/partials/signup-form.ejs
@@ -6,9 +6,10 @@
 >
   <div class="mb-3">
     <label for="registerEmail">Email</label>
-    <input type="email" class="form-control" id="registerEmail" name="email" placeholder="Email" required autofocus>
+    <input type="email" class="form-control" id="registerEmail" name="email" placeholder="email@example.com" required autofocus>
     <label for="registerPassword" class="mt-3">Password</label>
     <input type="password" class="form-control" id="registerPassword" name="password" placeholder="Password" required>
   </div>
   <button class="btn btn-success btn-block" type="submit">Sign up</button>
+  <span class="form-suggestion mt-3">Already have an account? <a href="/login">Log in</a></span>
 </form>
