--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,17 +2,7 @@
 <body>
   <%- include('../partials/header') %>
   <div class="container">
-    <ul>
-      <li>
-        <a href="/chat"><h2>Chat</h2></a>
-      </li>
-      <li>
-        <a href="/productos"><h2>Products</h2></a>
-      </li>
-      <li>
-        <a href="/carrito"><h2>Cart</h2></a>
-      </li>
-    </ul>
+    <h1>CODER BACKEND</h1>
   </div>
 </body>
 </html>
