--- a/views/partials/product-form.ejs
+++ b/views/partials/product-form.ejs
@@ -1,6 +1,6 @@
 <form
   id="productForm"
-  class="product-form mx-auto p-3 border rounded-bottom shadow-md"
+  class="product-form mx-auto p-3 border rounded shadow-md"
   method="post"
   action="/productos"
   enctype="multipart/form-data"
@@ -21,8 +21,4 @@
   </div>
 
   <input class="btn btn-success d-inline-block ms-auto" type="submit" value="Add product"">
-  <!-- ?XXX: remove -->
-  <!-- <a href="/productos" onclick="window.location.href = '/productos'">
-    <button class="btn btn-outline-secondary d-inline-block">View products</button>
-  </a> -->
 </form>
