--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/index.css">
   <script defer src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
-  <script defer src="/socket.io/socket.io.js"></script>
+  <script defer type="module" src="/socket.io/socket.io.js"></script>
   <script defer type="module" src="/js/index.js"></script>
   <% if (locals.content) { %>
     <%- content %>
