--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -27,7 +27,7 @@
     <form
       id="checkoutForm"
       method="get"
-      action="/checkout-messages"
+      action="/checkout-notifications"
       class="m-3 ms-auto"
     >
       <button class="btn btn-success" type="submit">Confirm purchase ></button>
